Fix upvote/downvote sprite misalignment

--- a/src/_sprite-settings.scss
+++ b/src/_sprite-settings.scss
@@ -23,13 +23,13 @@ $p-config-alt: [180,30];
 // Arrows
 $p-arrow-up: [0,0];
 $p-arrow-upmod: [0,30];
-$p-arrow-down: [30,0];
-$p-arrow-downmod: [30,30];
+$p-arrow-down: [32,0];
+$p-arrow-downmod: [32,30];
 
 // Offsets
 $offs-logo: [0,0];
 $offs-header-icons: [70,0];
-$offs-arrows: [290,0];
+$offs-arrows: [309,0];
 
 // Rects
 $rect-60sq: [60,60];
